Cleanup repository setting definitions used for validation at 'Create Repository' statements - fs,url